# Chatmux

./: .gitignore  AGENTS.md  Cargo.toml  README.md  justfile  package-lock.json  package.json  playwright.config.js
.codex/skills/chatmux-frontend/: SKILL.md
.github/workflows/: ci.yml  release-cross-os.yml
chatmux-adapter-claude/: Cargo.toml
chatmux-adapter-claude/src/: lib.rs
chatmux-adapter-gemini/: Cargo.toml
chatmux-adapter-gemini/src/: lib.rs
chatmux-adapter-gpt/: Cargo.toml
chatmux-adapter-gpt/src/: lib.rs
chatmux-adapter-grok/: Cargo.toml
chatmux-adapter-grok/src/: lib.rs
chatmux-common/: Cargo.toml
chatmux-common/src/: adapter.rs  error.rs  ids.rs  lib.rs  model.rs  protocol.rs
chatmux-core/: Cargo.toml
chatmux-core/src/: coordinator.rs  lib.rs  routing.rs  runtime.rs  template.rs
chatmux-core/src/storage/: browser.rs  browser_bridge.js  mod.rs
chatmux-export/: Cargo.toml
chatmux-export/src/: lib.rs
chatmux-ui/: Cargo.toml  Trunk.toml  index.html
chatmux-ui/assets/css/: animations.css  base.css  components.css  tokens.css  utilities.css
chatmux-ui/extension-test/: README.md  manifest.json
chatmux-ui/src/: a11y.rs  app.rs  lib.rs  time.rs
chatmux-ui/src/bridge/: clipboard.rs  commands.rs  messaging.rs  mod.rs  permissions.rs  storage.rs  tabs.rs  webextension.js  webextension.rs
chatmux-ui/src/components/: mod.rs  search_filter_bar.rs  toast_container.rs  truncation_warning.rs
chatmux-ui/src/components/binding/: binding_card.rs  binding_conflict.rs  mod.rs  permission_request.rs
chatmux-ui/src/components/composer/: composer.rs  mod.rs  mode_selector.rs  package_preview.rs  target_selector.rs
chatmux-ui/src/components/diagnostics/: diagnostics_panel.rs  event_row.rs  mod.rs
chatmux-ui/src/components/export/: export_dialog.rs  mod.rs
chatmux-ui/src/components/inspection/: inspection_panel.rs  metadata_tab.rs  mod.rs  network_capture_tab.rs  raw_response_tab.rs  sent_payload_tab.rs
chatmux-ui/src/components/messages/: message_body.rs  message_card.rs  message_log.rs  mod.rs  new_messages_indicator.rs  round_divider.rs  run_divider.rs
chatmux-ui/src/components/primitives/: badge.rs  button.rs  checkbox.rs  chip.rs  code_block.rs  collapsible.rs  divider.rs  dropdown.rs  empty_state.rs  error_banner.rs  icon.rs  mod.rs  modal.rs  number_input.rs  section_header.rs  segmented_control.rs  skeleton.rs  surface.rs  text_area.rs  text_input.rs  toast.rs  toggle.rs  tooltip.rs
chatmux-ui/src/components/provider/: health_badge.rs  mod.rs  provider_chip.rs  provider_dot.rs  provider_icon.rs  provider_status_row.rs
chatmux-ui/src/components/routing/: context_strategy_selector.rs  cursor_inspector.rs  edge_detail_panel.rs  edge_list.rs  edge_policy_editor.rs  mod.rs
chatmux-ui/src/components/run/: mod.rs  run_config_sheet.rs  run_controls_bar.rs
chatmux-ui/src/components/settings/: mod.rs  settings_page.rs
chatmux-ui/src/components/summaries/: mod.rs  pinned_summary_manager.rs
chatmux-ui/src/components/templates/: mod.rs  template_editor.rs  template_list.rs  template_manager.rs
chatmux-ui/src/components/workspace/: mod.rs  workspace_header.rs  workspace_list.rs  workspace_row.rs
chatmux-ui/src/layout/: full_tab.rs  global_header.rs  mod.rs  nav_rail.rs  responsive.rs  screens.rs  side_panel.rs  sidebar.rs
chatmux-ui/src/models/: mod.rs  view_models.rs
chatmux-ui/src/state/: app_state.rs  binding_state.rs  controller.rs  diagnostics_state.rs  message_state.rs  mod.rs  run_state.rs  search_state.rs  selection_state.rs  toast_state.rs  workspace_state.rs
chatmux-ui/src/theme/: mod.rs  tokens.rs
context/: DESIGN.md  diagnostics.md  frontend-css-guide.md  project_overview.md  state.md
e2e/: ADDING_TESTS.md  README.md
e2e/chatgpt/: dom-anchors.spec.js  roundtrip.spec.js
e2e/firefox/: launcher.spec.js
e2e/shell/: chrome.spec.js  navigation.spec.js
e2e/support/: chrome-extension.js  firefox-launcher.js  run-firefox-extension.js
e2e/support/providers/: chatgpt.js
extension-src/chrome/: background.js  manifest.json
extension-src/common/: background.js  content-claude.js  content-gemini.js  content-gpt.js  content-grok.js
extension-src/firefox/: manifest.json
xtask/: Cargo.toml
xtask/src/: main.rs
