[package]
name = "chatmux-adapter-grok"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chatmux-common = { path = "../chatmux-common" }
chrono.workspace = true
js-sys.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
wasm-bindgen.workspace = true
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "Event",
    "HtmlButtonElement",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "Location",
    "Node",
    "NodeList",
    "Window",
] }
