[package]
name = "chatmux-ui"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"
leptos_meta = "0.7"

# Wasm bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlSelectElement",
    "Window",
    "Node",
    "NodeList",
    "DomRect",
    "DomTokenList",
    "CssStyleDeclaration",
    "MediaQueryList",
    "MediaQueryListEvent",
    "Navigator",
    "Clipboard",
    "ScrollBehavior",
    "ScrollIntoViewOptions",
    "ResizeObserver",
    "ResizeObserverEntry",
    "ResizeObserverSize",
    "KeyboardEvent",
    "MouseEvent",
    "FocusEvent",
    "InputEvent",
    "CustomEvent",
    "WheelEvent",
    "Storage",
    "console",
] }
js-sys = "0.3"
serde-wasm-bindgen = "0.6"

# Shared types — canonical wire types for the bridge
chatmux-common = { path = "../chatmux-common" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "js", "serde"] }
chrono = { version = "0.4", features = ["wasmbind", "serde"] }
gloo-timers = "0.3"
gloo-events = "0.2"
gloo-utils = "0.2"

# Logging
log = "0.4"
console_log = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
